assets/css/style.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

/* 
COLORS - these color names are made up
#36B379 minty green
#36AEB3 tealy blue
#3670B3 aquatic blue
#3A36B3 royalish blue
*/

:root {
    --topColor: #36B379;
    --mainColor: #36AEB3;
    --frameColor: #3A36B3;
    --extraColor: #3670B3;
}

/* Header+Nav Content */

header {
    padding: 20px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    background-color: var(--topColor);
    color: black;
}

h1 {
    display: inline-block;
    font-size: 48px;
}

nav {
    padding-top: 15px;
    margin-right: 20px;
    float: right;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 20px;
    display: flex;
    flex-wrap: wrap;
}

nav ul {
    list-style-type: none;
}

nav ul li {
    display: inline-block;
    margin-left: 25px;
}

/* Body Content */

body {
    background-color: var(--mainColor);
}

/* Body - About Me */

.aboutMe {
    border-style: solid;
    border-width: 1px;
    padding: 10px;
    float: left;
    width: 75%;
}

.aboutMe h2 {
    float: left;
    margin-left: 20%;
    padding: 5%;
}

.aboutMe p {
    float: left;
}

.aboutMe img {
    border-radius: 50%;
    float: right;
    max-height: 300px;
}

/* Body - My Work */

.myWork {
    border-style: solid;
    border-width: 1px;
    padding: 10px;
    float: left;
    width: 100%;
}

.workImageMain img {
    border-style: solid;
    border-color: var(--frameColor);
    border-width: 10px; 
    max-height: 500px;
}

.workImageGeneric img {
    max-height: 300px
}

figure {
    border-style: solid;
    border-width: 1px;
    padding: 10px;
    float: left;
    width: 25%;
}

/* Footer Content */

footer {
    text-align: center;
    float: left;
    width: 100%;
    border-bottom: 10px solid var(--extraColor);
    color: black;
    background-color: var(--topColor);    
  }
  
/* Media Queries */

@media screen and (max-width: 992px) {
    .aboutMe {
      width: 75%;
    }
  }

@media screen and (max-width: 768px) {
    .aboutMe {
      width: 100%;
    }
    header {
        display: inline-block;
    }
  }

